@@ -1,5 +1,7 @@
 package collection_map_tasks;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Set;
 
@@ -11,7 +13,10 @@ public class Set_Iteration {
 
     public static void main(String[] args) {
 
-        Set<String> someObj = Set.of("1", "2", "3", "val1", "val2", "val3");
+      //  Set<String> someObj = Set.of("1", "2", "3", "val1", "val2", "val3");
+        Set<String> someObj=new HashSet<>(Arrays.asList("1","2","1","3","val1"));
+        System.out.println(someObj);
+
 
         for (String each : someObj) {
             System.out.println(each);
